[gd_scene load_steps=21 format=3 uid="uid://ufije5euvy2d"]

[ext_resource type="Script" uid="uid://cwlu1ljdmf8ow" path="res://scenes/CutScenes/cut_scenes.gd" id="1_maf25"]
[ext_resource type="Texture2D" uid="uid://q1o6mf154s0v" path="res://assets/CutSceneAssets/museum/Generated Image October 13, 2025 - 4_18PM.png" id="2_mqpaf"]
[ext_resource type="Texture2D" uid="uid://cd678mh6pud3o" path="res://assets/CutSceneAssets/museum/Generated Image October 13, 2025 - 4_19PM.png" id="3_5f7kl"]
[ext_resource type="Texture2D" uid="uid://chjo1px4ecs4v" path="res://assets/CutSceneAssets/Jay&Roshni/jay&Roshni.png" id="4_5aa3l"]
[ext_resource type="FontFile" uid="uid://dkrvcfgcvaqd5" path="res://assets/fonts/Phantom Shadow Serif Demo.otf" id="5_jdluh"]
[ext_resource type="Texture2D" uid="uid://bmjc337j580ty" path="res://assets/CutSceneAssets/museum/Screenshot 2025-10-13 162814.png" id="6_qqpak"]
[ext_resource type="Texture2D" uid="uid://cpdgfwdewid2j" path="res://assets/CutSceneAssets/Jay/jayLookingUp.png" id="7_t3yxu"]
[ext_resource type="Texture2D" uid="uid://b7e853ju8v4o8" path="res://assets/CutSceneAssets/Roshni/Roshnilookingup.png" id="8_6yhfn"]
[ext_resource type="Texture2D" uid="uid://d14188g3q7jjk" path="res://assets/CutSceneAssets/museum/Screenshot 2025-10-13 162756.png" id="9_yp25a"]
[ext_resource type="Texture2D" uid="uid://beljj1hc2mdw4" path="res://assets/CutSceneAssets/Jay/JayDefault.png" id="10_7lnyq"]
[ext_resource type="Texture2D" uid="uid://b7tait1ll7re5" path="res://assets/CutSceneAssets/Roshni/RoshniDefault.png" id="11_maf25"]
[ext_resource type="Texture2D" uid="uid://3tmgmb5tcwab" path="res://assets/CutSceneAssets/letter boxing png.png" id="12_br045"]
[ext_resource type="Texture2D" uid="uid://mt50higk6osv" path="res://assets/DialogueBox/Bar Background light up.png" id="13_wn5d5"]
[ext_resource type="Texture2D" uid="uid://cid817uqc8hmo" path="res://assets/Buttons/nextLightup.png" id="14_maf25"]
[ext_resource type="Texture2D" uid="uid://bemwddfyp7kpp" path="res://assets/Buttons/skiplightup.png" id="15_maf25"]

[sub_resource type="Animation" id="Animation_4v03o"]
resource_name = "1st_cutscene"
length = 8.3896
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroScene/MuseumNight:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroScene/MuseumDay:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.53333, 2.83333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IntroScene/MuseumDay:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.3, 4.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(3.02222, 3.02222), Vector2(1.347, 1.347)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IntroScene/jay&Roshni:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3.3, 4.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(522, 680), Vector2(522, 410)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("IntroScene/jay&Roshni:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.3, 4.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.471116, 0.471116), Vector2(0.331, 0.331)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IntroScene:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(5.6, 5.63333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Scene2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 5.63333, 8.66667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Scene2/Background:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(5.63333, 6.96667),
"transitions": PackedFloat32Array(1, 0.482968),
"update": 0,
"values": [Vector2(0.916, 0.916), Vector2(0.816066, 0.816066)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Scene2/Jay1:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(5.66667, 7),
"transitions": PackedFloat32Array(1, 0.482968),
"update": 0,
"values": [Vector2(0.981, 0.981), Vector2(0.901074, 0.901074)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Scene2/Roshni1:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(5.66667, 7),
"transitions": PackedFloat32Array(1, 0.482968),
"update": 0,
"values": [Vector2(0.991, 0.991), Vector2(0.901074, 0.901074)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Fade effect:color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1.26667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ooai8"]
resource_name = "2nd_scene"
length = 0.2425
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scene3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scene3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-110, -195.215), Vector2(-1354, -195.215)]
}

[sub_resource type="Animation" id="Animation_maf25"]
resource_name = "Fade_Effect_Animation"
length = 1.2966
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade effect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.26667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade effect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rcpro"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroScene/MuseumNight:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroScene/MuseumDay:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IntroScene/MuseumDay:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3.02222, 3.02222)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IntroScene/jay&Roshni:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(522, 410)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("IntroScene/jay&Roshni:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.471116, 0.471116)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IntroScene:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Scene2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Scene2/Background:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.816066, 0.816066)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Scene2/Jay1:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.901074, 0.901074)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Scene2/Roshni1:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.901074, 0.901074)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Fade effect:color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Scene3:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Scene3:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-110, -132)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Fade effect:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_373et"]
_data = {
&"1st_cutscene": SubResource("Animation_4v03o"),
&"2nd_scene": SubResource("Animation_ooai8"),
&"Fade_Effect_Animation": SubResource("Animation_maf25"),
&"RESET": SubResource("Animation_rcpro")
}

[node name="CutScenes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_maf25")

[node name="IntroScene" type="Node2D" parent="."]

[node name="MuseumNight" type="TextureRect" parent="IntroScene"]
offset_left = 234.0
offset_top = 171.0
offset_right = 1706.0
offset_bottom = 875.0
scale = Vector2(3.02222, 3.02222)
pivot_offset = Vector2(736.173, 352.266)
texture = ExtResource("2_mqpaf")

[node name="MuseumDay" type="TextureRect" parent="IntroScene"]
offset_left = 234.0
offset_top = 171.0
offset_right = 1706.0
offset_bottom = 875.0
scale = Vector2(3.02222, 3.02222)
pivot_offset = Vector2(736.173, 352.266)
texture = ExtResource("3_5f7kl")

[node name="jay&Roshni" type="TextureRect" parent="IntroScene"]
offset_left = 522.0
offset_top = 680.0
offset_right = 1418.0
offset_bottom = 1832.0
scale = Vector2(0.471116, 0.471116)
pivot_offset = Vector2(448.31, 526.472)
texture = ExtResource("4_5aa3l")

[node name="RichTextLabel" type="RichTextLabel" parent="IntroScene"]
visible = false
offset_left = 494.0
offset_top = 444.0
offset_right = 1444.0
offset_bottom = 594.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("5_jdluh")
theme_override_font_sizes/normal_font_size = 65
text = "LIGHT UP"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scene2" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="Scene2"]
offset_left = -269.0
offset_top = -61.0
offset_right = 2193.0
offset_bottom = 1166.0
scale = Vector2(0.816066, 0.816066)
pivot_offset = Vector2(1230.42, 612.897)
texture = ExtResource("6_qqpak")

[node name="Jay1" type="TextureRect" parent="Scene2"]
offset_left = 519.0
offset_top = 214.0
offset_right = 943.0
offset_bottom = 1366.0
scale = Vector2(0.901074, 0.901074)
pivot_offset = Vector2(182.195, 494.16)
texture = ExtResource("7_t3yxu")

[node name="Roshni1" type="TextureRect" parent="Scene2"]
offset_left = 893.0
offset_top = 263.0
offset_right = 1339.0
offset_bottom = 1415.0
scale = Vector2(0.901074, 0.901074)
pivot_offset = Vector2(182.195, 494.16)
texture = ExtResource("8_6yhfn")
metadata/_edit_lock_ = true

[node name="Scene3" type="Node2D" parent="."]
visible = false
position = Vector2(-110, -132)
scale = Vector2(1.45, 1.45)

[node name="Background" type="TextureRect" parent="Scene3"]
offset_left = 35.1724
offset_top = -148.966
offset_right = 2512.17
offset_bottom = 1078.03
scale = Vector2(1.10198, 1.10198)
pivot_offset = Vector2(1230.42, 612.897)
texture = ExtResource("9_yp25a")

[node name="Background2" type="TextureRect" parent="Scene3"]
visible = false
offset_left = -269.0
offset_top = -61.0
offset_right = 2193.0
offset_bottom = 1166.0
scale = Vector2(0.816066, 0.816066)
pivot_offset = Vector2(1230.42, 612.897)
texture = ExtResource("6_qqpak")

[node name="Jay1" type="TextureRect" parent="Scene3"]
offset_left = 373.214
offset_top = 2.57946e-05
offset_right = 1269.21
offset_bottom = 1152.0
scale = Vector2(0.473986, 0.473986)
pivot_offset = Vector2(182.195, 494.16)
texture = ExtResource("10_7lnyq")

[node name="Roshni1" type="TextureRect" parent="Scene3"]
offset_left = 1303.45
offset_top = 51.7242
offset_right = 2199.45
offset_bottom = 1203.72
scale = Vector2(0.445473, 0.445473)
pivot_offset = Vector2(182.195, 494.16)
texture = ExtResource("11_maf25")

[node name="LetterBoxing" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 34.0
offset_right = 1954.0
offset_bottom = 1080.0
scale = Vector2(1.24352, 1.24352)
pivot_offset = Vector2(920.693, 540.173)
texture = ExtResource("12_br045")

[node name="Fade effect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -110.0
offset_right = -30.0
offset_bottom = 40.77
scale = Vector2(26.76, 26.76)
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBackground" type="TextureRect" parent="CanvasLayer"]
offset_left = 427.0
offset_top = 675.0
offset_right = 1352.0
offset_bottom = 887.0
scale = Vector2(1.10692, 1.10692)
texture = ExtResource("13_wn5d5")

[node name="DialogueLabel" type="RichTextLabel" parent="CanvasLayer/DialogueBackground"]
layout_mode = 0
offset_left = 85.8237
offset_top = 40.6533
offset_right = 935.823
offset_bottom = 190.653
scale = Vector2(0.868479, 0.868479)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/normal_font = ExtResource("5_jdluh")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Gay boy Fuck Nigger"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/DialogueBackground"]
visible = false
layout_mode = 0
offset_top = 14.9035
offset_right = 200.0
offset_bottom = 71.9035
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("5_jdluh")
theme_override_font_sizes/normal_font_size = 36
text = "Diddy"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 1137.0
offset_top = 850.0
offset_right = 2188.0
offset_bottom = 1249.0
scale = Vector2(0.197345, 0.197345)
texture_normal = ExtResource("14_maf25")

[node name="SkipButton" type="TextureButton" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0.596078)
offset_left = 132.0
offset_top = 755.0
offset_right = 1183.0
offset_bottom = 1154.0
scale = Vector2(0.197345, 0.197345)
texture_normal = ExtResource("15_maf25")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_373et")
}
